# OpenEnv

./: Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
scripts/: validate-submission.sh
server/: app.py  constants.py  grader.py  inventory_env.py
